# coto

./: .gitignore  CITATION.cff  CMakeLists.txt  Doxyfile  README.md  absi_8h.html  absi_8h__dep__incl.map  absi_8h__dep__incl.md5  absi_8h__incl.map  absi_8h__incl.md5  absi_8h_source.html  amplitude_8h_source.html  annotated.html  annotated_dup.js  cartesian_8h_source.html  class.plantuml  classDiagram-members.html  classDiagram.html  classDiagram.js  classDiagram__coll__graph.map  classDiagram__coll__graph.md5  classFileError-members.html  classFileError.html  classFileError__coll__graph.map  classFileError__coll__graph.md5  classGate-members.html  classGate.html  classGate.js  classGate__inherit__graph.map  classGate__inherit__graph.md5  classParsingError-members.html  classParsingError.html  classParsingError__coll__graph.map  classParsingError__coll__graph.md5  classParsingError__inherit__graph.map  classParsingError__inherit__graph.md5  classPhaseGate-members.html  classPhaseGate.html  classPhaseGate__coll__graph.map  classPhaseGate__coll__graph.md5  (+245 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: ci-cmake_tests.yml  doxygen.yml
archives/: 1.txt  2.txt  shell.nix
archives/include/: calc.h  lang.h
archives/ref/: calcul.py
archives/src/: FIF.cpp  integer.cpp  lang.cpp  number.cpp  rational.cpp
archives/test/: calc_test.cpp  lang_test.cpp
deliverables/s6/presentation/fr/: main.tex  travail-resultats.tex
deliverables/s6/report/fr/: Titre.tex
deliverables/s7/presentation/en/: annexes.tex  data.csv  etat-de-l-art.tex  travail-resultats.tex
deliverables/s7/presentation/fr/: annexes.tex  contexte.tex  main.tex
deliverables/s7/report/en/: Conclu.tex  Implem.tex  Title.tex  bibliographie.bib
deliverables/s7/report/fr/: Conclusion.tex  Implementation.tex  Modele.tex  Titre.tex  main.tex
doc/: Formal definition.tex  diagrams.tex  gates.tex  main.tex  reduction.tex
doc/Intervals/: cartesian.tex  intervals.tex  introduction.tex  polar.tex
doc/Reduction/: aaqdd.tex  aqdd.tex  foundation.tex  reduction.tex
include/: aaqdd.h  absi.h  amplitude.h  calc.h  diagram.h  gateappliers.h  polar.h  powarray.h  powmatrix.h  qasm.h  qdd.h  reduction.h  selection.h
include/absi/: cartesian.h  polar.h
include/qasm/: context.h  error.h  execute.h  gate.h  read.h  statements.h  variables.h
presentation/: Oral.tex  annexes.tex  cadre-formation.tex  contexte.tex  etat-de-l-art.tex  main.tex  travail-resultats.tex
ref/: calcul_test.py
report/: Conclusion.tex  Implementation.tex  Introduction.tex  Modele.tex  Titre.tex  bibliographie.bib  main.tex
s7/presentation/: annexes.tex  travail-resultats.tex
s7/presentation-en/: annexes.tex  cadre-formation.tex  contexte.tex  etat-de-l-art.tex  main.tex
s7/presentation-fr/: annexes.tex  cadre-formation.tex  main.tex  travail-resultats.tex
s7/report/: Implementation.tex  Introduction.tex  Modele.tex  bibliographie.bib  main.tex
s7/report-en/: Conclusion.tex  Implem.tex  Introduction.tex  Model.tex  main.tex
s7/report-fr/: Introduction.tex
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_2.js  files_3.js  files_4.js  (+43 more)
src/: README.md  aaqdd.cpp  absi.cpp  amplitude.cpp  diagram.cpp  gateappliers.cpp  integer.cpp  number.cpp  polar.cpp  powarray.cpp  powmatrix.cpp  prompt.cpp  qdd.cpp  random-diagram.cpp  reduction.cpp  selection.cpp
src/absi/: cartesian.cpp  polar.cpp
src/qasm/: context.cpp  error.cpp  execute.cpp  gate.cpp  qasm.cpp  read.cpp  statements.cpp  variables.cpp
test/: absi_test.cpp  amplitude_test.cpp  diagram_test.cpp  gateappliers_test.cpp  node_test.cpp  polar_test.cpp  qdd_test.cpp  reduction_test.cpp  selection_test.cpp
test/qasm/: qasm_test.cpp  test0.qasm  test1.qasm
